syntax = "proto3";

option go_package = "./pb";

package gserver;

// 公会相关proto

enum CmdGuild {
  CmdGuild_None         = 0; // 解决"The first enum value must be zero in proto3."的报错
  Cmd_GuildListReq      = 2001; // 公会列表查看
  Cmd_GuildListRes      = 2002;
  Cmd_GuildCreateReq    = 2003; // 创建公会
  Cmd_GuildCreateRes    = 2004;
  Cmd_GuildJoinReq      = 2005; // 请求加入某个公会
  Cmd_GuildJoinRes      = 2006;
  Cmd_GuildJoinAgreeReq = 2007; // 公会管理员处理入会请求
  Cmd_GuildJoinAgreeRes = 2008;
  Cmd_GuildDataViewReq  = 2009; // 查看本公会的数据
  Cmd_GuildDataViewRes  = 2010;
  Cmd_GuildJoinReqTip   = 2012; // 公会入户申请的提示
  Cmd_GuildJoinReqOpResult = 2013; // 自己的入会申请的操作结果
}

enum GuildPosition {
  Member  = 0; // 普通成员
  Manager = 1; // 管理员
  Leader  = 2; // 会长
}

// 公会在mongo中的保存格式
// 用于一次性把公会数据加载进来
message GuildLoadData {
  int64 id = 1; // 公会唯一id
  GuildInfo baseInfo = 2;
  map<int64,GuildMemberData> members = 3; // 公会成员(明文)
  map<int64,bytes> joinRequests = 4; // 申请加入公会的请求信息(proto序列化)
}

// 公会数据
message GuildData {
  int64 id = 1; // 公会唯一id
  GuildInfo baseInfo = 2;
  map<int64,GuildMemberData> members = 3; // 公会成员
  map<int64,GuildJoinRequest> joinRequests = 4; // 申请加入公会的请求信息
}

// 公会成员数据
message GuildMemberData {
  int64 id = 1; // 玩家id
  string name = 2; // 玩家名称
  int32 position = 3; // 职位
}

// 公会信息
message GuildInfo {
  int64 id = 1; // 公会id
  string name = 2; // 名称
  string intro = 3; // 介绍
  int32 memberCount = 4; // 成员数
}

// 申请加入公会的请求信息
message GuildJoinRequest {
  int64 playerId = 1; // 申请加入公会的玩家id
  string playerName = 2;
  int32 timestampSec = 3; // 时间戳(秒)
}

// 查看公会列表
message GuildListReq {
  int32 pageIndex = 1; // 分页索引
}

// 查看公会列表返回结果
// @Player
message GuildListRes {
  int32 pageIndex = 1; // 分页索引
  int32 pageCount = 2; // 总页数
  repeated GuildInfo guildInfos = 3; // 公会列表
}

// 创建公会请求
message GuildCreateReq {
  string name = 1; // 名称
  string intro = 2; // 介绍
}

// 创建公会请求返回结果
// @Player
message GuildCreateRes {
  string error = 1;
  int64 id = 2; // 公会id
  string name = 3; // 名称
}

// 加入公会请求
message GuildJoinReq {
  int64 id = 1; // 公会id
}

// 加入公会请求返回结果
// @Player
message GuildJoinRes {
  string error = 1;
  int64 id = 2; // 公会id
}

// 管理员同意请求者加入公会
message GuildJoinAgreeReq {
  int64 joinPlayerId = 1; // 申请加入公会的玩家id
  bool isAgree = 2; // 是否同意加入
}

// 同意加入公会返回结果
// @Player
message GuildJoinAgreeRes {
  string error = 1;
  int64 guildId = 2;
  int64 managerPlayerId = 3; // 管理员id
  int64 joinPlayerId = 4; // 申请加入公会的玩家id
  bool isAgree = 5; // 是否同意加入
}

// 查看自己公会的数据
message GuildDataViewReq {
}

// 查看公会数据返回结果
// @Player
message GuildDataViewRes {
  GuildData guildData = 1;
}

// 提示有人申请加入本公会
message GuildJoinReqTip {
   int64 playerId = 1; // 玩家id
   string playerName = 2; // 玩家名
}

// 自己的入会申请的操作结果
message GuildJoinReqOpResult {
  string error = 1;
  int64 guildId = 2;
  int64 managerPlayerId = 3; // 管理员id
  int64 joinPlayerId = 4; // 申请加入公会的玩家id
  bool isAgree = 5; // 是否同意加入
}
